fixing colour contrast

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@ ul li a {
 }
 
 ul li a:hover {
-  color: #ddd6cd;
+  color: #966e64;
 }
 
 header {
@@ -90,7 +90,7 @@ header a :last-of-type {
 .button {
   padding: .5em .75em;
   font-weight: bold;
-  background-color: #9b8579;
+  background-color: #000;
   color: #fff;
 }
 
@@ -135,7 +135,7 @@ section img {
   align-items: center;
 }
 
-.stipple close up {
+.stipple {
   display: block;
   width: 100%;
   height: 60em;
